--- a/src/tbbmalloc_proxy/CMakeLists.txt
+++ b/src/tbbmalloc_proxy/CMakeLists.txt
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_library(tbbmalloc_proxy SHARED
+add_library(tbbmalloc_proxy
     function_replacement.cpp
     proxy.cpp)
 
